--- a/main/static/gooster/GoosterStyle.css
+++ b/main/static/gooster/GoosterStyle.css
@@ -79,7 +79,7 @@ body{
 }
 
 .list-of-results{
-    height: 78%;
+    height: 73%;
     overflow-y: auto;
 }
 
